--- a/BuchLeaflet/code/1/index_978.html
+++ b/BuchLeaflet/code/1/index_978.html
@@ -27,30 +27,25 @@ marker2.bindPopup("<h1>Boisheim</h1><p>Ein kleines Dorf</p><ul><li>irgendwo</li>
 // popup offen zeigen
 // marker1.openPopup();
 
-
-/* nur ein popup
+/* nur ein popup gleichzeitig aktiv
 var popup1 = L.popup()
     .setLatLng([49.27264, 6.26469])
     .setContent('<p>Hallo Welt<br />Ich bin ein Popup.</p>')
     .openOn(mymap);
-
 var popup2 = L.popup({keepInView:true})
     .setLatLng([49.27264, 5.26469])
     .setContent('<p>Hallo Welt<br />Ich bin ein anderes Popup.</p>')
     .openOn(mymap);
 */
-
 /* mehrerer popup
 var popup1 = L.popup()
     .setLatLng([49.27264, 6.26469])
     .setContent('<p>Hallo Welt<br />Ich bin ein Popup.</p>')
     .addTo(mymap);
-
 var popup2 = L.popup({keepInView:true})
     .setLatLng([49.27264, 5.26469])
     .setContent('<p>Hallo Welt<br />Ich bin ein anderes Popup.</p>')
     .addTo(mymap);*/
-
 </script>
 </body>
 </html>
