--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -127,7 +127,7 @@
 						</table>
 					</section>
 					<section>
-						<p>Erstellen Sie ein &lt;div&gt;-Element in dem die Karte angezeigt werden soll</p>
+						<p>Erstelle ein &lt;div&gt;-Element in dem die Karte angezeigt werden soll</p>
 						<table>
 							<tr>
 								<td>
@@ -154,7 +154,7 @@
 						</table>
 					</section>
 					<section>
-						<p>Nun wird es spannend: Erstellen Sie das Karten-Objekt</p>
+						<p>Nun wird es spannend: Erstelle das Karten-Objekt</p>
 						<table>
 							<tr>
 								<td>
