--- a/BuchLeaflet/code/3/index_958.html
+++ b/BuchLeaflet/code/3/index_958.html
@@ -3,20 +3,16 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="leaflet-heat.js"></script>
 </head>
 <body>
-
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.1555 , 7.591838], 10);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 var points = [];
-
 var points1 = [
 [50.1555 , 7.591838 ],
 [50.0931 , 7.664177 ],
@@ -1380,20 +1376,10 @@ var points3 = [
 [50.088041 , 7.652033 ],
 [50.088041 , 7.652033 ]
 ];
-
-
-
-
-
-
 var heat = L.heatLayer(points).addTo(mymap);
-
-
 x=1;
 var name='';
-
 var interval = setInterval(function(){run()},1000);
-
 function run(){
 mymap.removeLayer(heat);
 name="points"+x.toString();
@@ -1406,14 +1392,7 @@ else
 {
 x++;
 }
-
-
-
-
 }
-
-
-
 </script>
 </body>
 </html>
