--- a/BuchLeaflet/code/3/index_956.html
+++ b/BuchLeaflet/code/3/index_956.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="gemeinden.js"></script>
 </head>
 <body>
@@ -13,9 +13,7 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([49.9555 , 7.591838], 8);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 function color(x) {
 return x > 1000 ? '#990000' :
 x > 750 ? '#d7301f' :
@@ -25,7 +23,6 @@ x > 200 ? '#fdbb84' :
 x > 100 ? '#fdd49e' :
 x > 0   ? '#fee8c8' :'#fff7ec';
 }
-
 function dcolor(x) {
 return x > 500 ? '#990000' :
 x > 400 ? '#d7301f' :
@@ -35,7 +32,6 @@ x > 100 ? '#fdbb84' :
 x > 50  ? '#fdd49e' :
 x > 0   ? '#fee8c8' :'#fff7ec';
 }
-
 function myStyle(feature) {
 return {
 fillColor: color(feature.properties.destatis.population),
@@ -45,7 +41,6 @@ color: 'white',
 fillOpacity: 0.85
 };
 }
-
 function mydStyle(feature) {
 return {
 fillColor: dcolor(feature.properties.destatis.population/feature.properties.destatis.area),
@@ -55,7 +50,6 @@ color: 'white',
 fillOpacity: 0.85
 };
 }
-
 function total(){
 var geoJsonLayer = L.geoJson(ct, {style: myStyle}).addTo(mymap);
 removeLayer(densitylayer);
@@ -64,8 +58,6 @@ function density(){
 var densitylayer=L.geoJson(ct, {style: mydStyle}).addTo(mymap);
 removeLayer(geoJsonLayer);
 }
-
 </script>
-
 </body>
 </html>
