--- a/BuchLeaflet/code/3/index_957.html
+++ b/BuchLeaflet/code/3/index_957.html
@@ -3,18 +3,15 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="gemeinden.js"></script>
 </head>
 <body>
-
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([49.9555 , 7.591838], 8);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 function color(x) {
 return x > 1000 ? '#990000' :
 x > 750 ? '#d7301f' :
@@ -24,7 +21,6 @@ x > 200 ? '#fdbb84' :
 x > 100 ? '#fdd49e' :
 x > 0   ? '#fee8c8' :'#fff7ec';
 }
-
 function myStyle(feature) {
 return {
 fillColor: color(feature.properties.destatis.population),
@@ -34,9 +30,7 @@ color: 'white',
 fillOpacity: 0.85
 };
 }
-
 var geoJsonLayer = L.geoJson(ct, {style: myStyle}).addTo(mymap);
-
 </script>
 </body>
 </html>
