--- a/BuchLeaflet/code/4/index_952.html
+++ b/BuchLeaflet/code/4/index_952.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
-
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <link rel="stylesheet" href="MarkerCluster.css"/>
 <link rel="stylesheet" href="MarkerCluster.Default.css"/>
 <script src="leaflet.markercluster-src.js"></script>
