--- a/BuchLeaflet/code/4/index_953.html
+++ b/BuchLeaflet/code/4/index_953.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="leaflet-beautify-marker-icon.css">
@@ -14,17 +14,13 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 9);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 L.marker([50.27264, 7.26469], {
 icon: L.BeautifyIcon.icon(
 //{iconSize: [50, 50]}
 ),
 draggable: true
 }).addTo(mymap).bindPopup("Ich bin ein beautify Marker");
-
-
 options = {
 icon: 'spinner',
 spin: 'true',
@@ -36,7 +32,6 @@ L.marker([50.27264, 6.26469], {
 icon: L.BeautifyIcon.icon(options),
 draggable: true
 }).addTo(mymap).bindPopup("Ich bin ein beautify Marker");
-
 options = {
 icon: 'plane',
 iconShape: 'marker',
@@ -48,9 +43,6 @@ L.marker([50.27264, 8.26469], {
 icon: L.BeautifyIcon.icon(options),
 draggable: true
 }).addTo(mymap).bindPopup("Ich bin ein beautify Marker");
-
-
 </script>
-
 </body>
 </html>
